fix spacing and text

--- a/src/css/home.scss
+++ b/src/css/home.scss
@@ -7,7 +7,7 @@
 
   .content-wrapper {
     display: flex;
-    width: 70vw;
+    width: 60vw;
     gap: 25px;
 
     .text-wrapper {
